XMLExper/m12/m12_446_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLDeclaration::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:1385:65: error: cannot dynamic_cast ‘declaration’ (of type ‘const class tinyxml2::XMLDeclaration*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1385 |     return ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(declaration) && XMLUtil::StringEqual( declaration->Value(), Value() ));
      |                                                                 ^
diff: tinyxml2.o: No such file or directory
